Ready for release Signed-off-by: Sam <Sam.V_@hotmail.com>

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,36 @@
-name: "dBUB"
+﻿name: "dBUB"
 author: SamV522
 description: "A simple plugin to bridge users groups between an online database and a minecraft server"
 version: "1.0"
 main: me.SamV522.dBUB.Main
+permissions:
+    dbub.*:
+        description: 'Gives access to all doorman commands'
+        children:
+            dbub.reload: true
+            dbub.version: true
+            dbub.help: true
+    dbub.reload:
+        description: Reloads dBUB
+        default: op
+    dbub.version:
+        description: 'Shows the user which version of dBUB is running'
+        default: op
+    dbub.version:
+        description: "Shows the user their available commands"
+commands:
+    dbubreload:
+      description: 'Reloads dBUB'
+      usage: '/dBUBreload'
+      permission: dbub.reload
+      permisison-message: "You don't have <permission>"
+    dbubversion:
+        description: "Shows the user which version of dBUB is running"
+        usage: '/dBUBversion'
+        permission: dbub.version
+        permisison-message: "You don't have <permission>"
+    dbubhelp:
+        description: 'Shows the user the available commands for dBUB'
+        usage: '/dBUBhelp'
+        permission: dbub.help
+        permisison-message: "You don't have <permission>"
